refactor: 优化网络工具类并重构Jackson工具类实现